# aedii-projeto

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh
docs/: Doxyfile  annotated.html  annotated_dup.js  apps__config_8h_source.html  arraylist_8h.html  avl_8h.html  avl_8h.js  avl_8h_source.html  book_8h_source.html  bst_8h.html  bst_8h.js  bst_8h_source.html  classes.html  data_8h_source.html  debug_8h_source.html  dir_000001_000003.html  dir_08518efd943dc3b721567e262b32111a.html  dir_08518efd943dc3b721567e262b32111a_dep.dot  dir_089507659162681e5efe6c3362a730da.html  dir_0be66299c1978797706f1a83ea952084.html  dir_1733ed79977a32efb5c4ca42ca6a9480.html  dir_1733ed79977a32efb5c4ca42ca6a9480.js  dir_1a47d7bec1ef326a91550c7622078a8b.html  dir_1a47d7bec1ef326a91550c7622078a8b.js  dir_1ba4f1d50de76e418b39e2e34b3631a4.html  dir_2ae958bf4aa7a651bb9d4a005d88ced1.html  dir_2db22c62105db7e267ab92dd2d181a78.html  dir_2db22c62105db7e267ab92dd2d181a78.js  dir_2de559c8a7c63d07aaa347a5b1374c06.html  dir_2feb9a0bed711d2724d69f41a723d546.html  dir_32a9c6d7966913e545d6a18e10476bf3.html  dir_3378a87daf158ab06eced7bfc8ed2672.html  dir_340e036783616f70cb212281bdfa528b.html  dir_3ad73ef7659519bb0782b652e88fdedd.js  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  dir_4e7c8c4fc0d923782da8a23d70a9725b.js  dir_557ebbaa6363f0020ac92f86910bca0c.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_5eb159725f84c66aafd839904a4acdd0.html  (+137 more)
docs/html/: annotated.html  arraylist_8h.html  arraylist_8h_source.html  avl_8h.js  avl_8h_source.html  bin_2include_2avl_8h.html  bin_2include_2avl_8h.js  bin_2include_2avl_8h_source.html  bin_2include_2bst_8h.html  bin_2include_2bst_8h.js  bin_2include_2bst_8h_source.html  bin_2include_2data_8h_source.html  bin_2include_2index_8h.html  bin_2include_2index_8h.js  bin_2include_2index_8h_source.html  bin_2include_2rb_8h.html  bin_2include_2rb_8h.js  bin_2include_2rb_8h_source.html  bin_2include_2table_8h_source.html  bin_2include_2tree_8h.html  bin_2include_2tree_8h.js  bin_2include_2tree_8h_source.html  bin_2include_2types_8h.html  bin_2include_2types_8h.js  bin_2include_2types_8h_source.html  bin_2include_2util_8h.html  bin_2include_2util_8h.js  bin_2include_2util_8h_source.html  data_8h_source.html  debug_8h.html  debug_8h_source.html  dir_2d6c5d9ec7436d977f107c186b3a0e00.html  dir_2d6c5d9ec7436d977f107c186b3a0e00.js  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_2ea30aa2956a8db99dd22aa5e597f384.js  dir_2f9c4682e4a8fc6196a46823e83c3d97.html  dir_41de20ccc1c48d2fbc8cee46a4d684be.html  dir_41de20ccc1c48d2fbc8cee46a4d684be.js  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7711e90abc3d4bd55823d9013a185d04.html  (+110 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+50 more)
docs/latex/: annotated.tex  avl_8h.tex  files.tex  index_8h.tex  rb_8h.tex  refman.tex  struct_a_v_l___index.tex  struct_b_s_t___index.tex  struct_junk.tex  struct_r_b___index.tex  structavl__methods.tex  structindex__methods.tex  structrb__methods.tex  structrb__node.tex  structutil__methods.tex  types_8h.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+31 more)
documentation/: Doxyfile
html/: annotated.html  bst_8h_source.html  classes.html  config_8h_source.html  data_8h_source.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_87a455bccb09a92130c26a11a880c98a.html  dir_96f43c7ab4bc14dadfaf841b26eb34c9.html  dir_9a3f55e13068c50c87e3e87e0c5bcdc8.js  dir_b943e4eea042ee237f632d8eb8ede2ae.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4.js  dir_e54053a66167fca824ecfed91a181be1.html  dir_eb2452741c2a6e6bb24476e4ba655c92.html  examples_2arquivo2_2bst_8h_source.html  examples_2arquivo3_2bst_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_type.html  index_8h.html  index_8h_source.html  json__config_8h_source.html  menudata.js  navtreeindex0.js  src_2libs_2data_2trees_2bst_2bst_8h.js  struct_index.html  struct_item.js  structavl__methods.js  structbst__methods.html  structindex__methods.html  structindex__methods.js  structrb__methods.html  structtree__methods.html  structtree__methods.js  structutil__methods.js  tree_8h_source.html  types_8h.html  (+4 more)
html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  search.css  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  variables_0.js  variables_1.js  (+10 more)
src/: CMakeLists.txt
src/data/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/main/: CMakeLists.txt  data.h  main.c  table.c  table.h
src/main/data/: CMakeLists.txt  data.c  data.h  table.c  table.h
src/trees/: CMakeLists.txt
src/util/: CMakeLists.txt  util.c  util.h
tests/: CMakeLists.txt
tests/experiment/: experiment.ipynb
tests/unit/: CMakeLists.txt
tests/unit/avl/: CMakeLists.txt  avl.c
tests/unit/bst/: CMakeLists.txt  bst.c
tests/unit/index/: CMakeLists.txt  garbage.c
tests/unit/rb/: CMakeLists.txt  rb.c
(+48 files in other folders)
